# trix

./: .dockerignore  .env.example  .gitignore  .tmp-android-client-store.sqlite  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  default.profraw  docker-compose.yml  entities.json  justfile  mempalace.yaml  strings.yaml
.githooks/: pre-commit
.github/workflows/: xmpp-restore-verify.yml
.warp/history/: chat-202603261111.md
apple/: README.md  TrixMac.entitlements  TrixMatrixMac.entitlements  TrixMatrixiOS.entitlements  project.yml
apple/TrixMatrix.xcodeproj/: project.pbxproj
apple/scripts/: archive-testflight.sh  run-live-call-echo-assistant-macos.sh  run-local-call-lab-macos.sh  run-persistent-sync-gate-test.sh  run-persistent-sync-gate.sh
apps/android/: README.md  gradle.properties  settings.gradle.kts
apps/ios/: README.md  project.yml
apps/macos/: Package.swift  README.md  project.yml
apps/macos-admin/: Package.swift  README.md  project.yml
apps/trix-admin-api/: Cargo.toml
apps/trix-admin-api/src/: main.rs
apps/trix-botd/: Cargo.toml
apps/trix-botd/src/: main.rs
apps/trix-call-control/: Cargo.toml
apps/trix-call-control/src/: main.rs
apps/trix-device-passport/: Cargo.toml  README.md
apps/trix-device-passport/src/: main.rs
apps/trix-push-gateway/: Cargo.toml  README.md
apps/trix-push-gateway/src/: main.rs  store.rs  xmpp_component.rs
apps/trix-tui/: Cargo.toml
apps/trix-tui/src/: app.rs  main.rs  ui.rs
apps/trixd/: Cargo.toml
apps/trixd/src/: main.rs
assets/branding/: README.md
bindings/: trix_core.swift  trix_coreFFI.h
contracts/: ffi-usage-contract.json
crates/trix-bot/: Cargo.toml
crates/trix-bot/examples/: echo_bot.rs
crates/trix-bot/src/: bot.rs  identity.rs  lib.rs  state.rs
crates/trix-bot/tests/: runtime_e2e.rs
crates/trix-core/: Cargo.toml  uniffi.toml
crates/trix-core/src/: attachments.rs  config.rs  crypto.rs  device_transfer.rs  ffi.rs  history_recovery.rs  history_sync_payload.rs  lib.rs  message.rs  message_repair_payload.rs  messenger.rs  realtime.rs  signatures.rs  storage.rs  sync.rs  transport.rs
crates/trix-core/tests/: client_scenario_e2e.rs  control_e2e.rs  ffi_surface_test.rs  safe_ffi_e2e.rs
crates/trix-push/: Cargo.toml
crates/trix-push/src/: lib.rs
crates/trix-server/: Cargo.toml
crates/trix-server/src/: admin_auth.rs  admin_logs.rs  app.rs  auth.rs  blobs.rs  build.rs  config.rs  db.rs  error.rs  lib.rs  push.rs  rate_limit.rs  signatures.rs  state.rs
crates/trix-server/src/routes/: accounts.rs  admin.rs  admin_debug_metrics.rs  admin_feature_flags.rs  admin_logs.rs  auth.rs  blobs.rs  chats.rs  devices.rs  history_sync.rs  inbox.rs  key_packages.rs  message_repairs.rs  mod.rs  system.rs  ws.rs
crates/trix-server/tests/: migration_catalog_contract.rs  openapi_v0_contract.rs
crates/trix-types/: Cargo.toml
deploy/public-test/: README.md  docker-compose.public-test.yml
docs/: admin-app.md  architecture.md  bot-harness.md  client-localization.md  client-smoke-harness.md  client-test-checklist.md  contracts.md  development-setup.md  feature-flags.md  ffi-bindings.md  ios-ui-chat-flow-follow-up.md  mvp-checklist.md  onboarding-simplification-review.md  security.md  server-config.md  server-operations.md  v0-spec.md
docs/known_bugs/: README.md  ios-attachment-download-flow.md  ios-auto-opens-first-dialog.md  ios-dm-rooms-missing.md  ios-legacy-parity-ui.md  ios-recovery-key-copy-action.md  macos-attachment-transfer-failed.md  macos-legacy-parity-ui.md  macos-recovery-key-copy-action.md  macos-three-column-settings.md  matrix-account-bootstrap-provisioning-parity.md  matrix-admin-control-plane-parity.md  matrix-attachments-rich-media-parity.md  matrix-bot-runtime-parity.md  matrix-chat-lifecycle-parity.md  matrix-device-management-parity.md  matrix-diagnostics-system-status-parity.md  matrix-group-membership-parity.md  matrix-history-sync-repair-parity.md  matrix-push-notifications-parity.md  matrix-reactions-parity.md  matrix-read-delivery-receipts-parity.md  matrix-testflight-release-parity.md  matrix-timeline-restart-refresh.md  matrix-typing-indicators-parity.md  matrix-user-directory-profile-parity.md
docs/legal/: eula-draft.md  privacy-policy-draft.md
docs/runbooks/: 2026-05-20-tri-30-signed-device-apns-persistent-sync-smoke.md  2026-05-20-tri-49-ios-callee-A-readiness.md  2026-05-21-tri-110-call-ops-readiness.md
docs/tasks/: 2026-05-15-agent-implementation-coordinator-prompt.md  2026-05-15-apns-wake-only-signed-device-smoke.md  2026-05-15-apple-operator-health-dashboard.md  2026-05-15-automated-backup-restore-ci.md  2026-05-15-client-quality-of-life-section-5.md  2026-05-15-conversation-xep-section-2.md  2026-05-15-device-trust-security-section-3.md  2026-05-15-encrypted-voice-messages.md  2026-05-15-ephemeral-self-destruct-messages.md  2026-05-15-ios-screenshot-screen-recording-indicator.md  2026-05-15-local-app-lock-biometrics-passcode.md  2026-05-15-local-decrypted-history-search.md  2026-05-15-local-operator-panel.md  (+26 more)
migrations/: 0001_init.sql  0002_device_key_package_reservation_tracking.sql  0003_attachment_blob_upload_state.sql  0004_device_link_intents.sql  0005_device_transfer_bundles.sql  0006_history_sync_chunks.sql  0007_admin_runtime_settings_and_provisions.sql  0008_chat_backfill_active_job_uniqueness.sql  0008_device_push_registrations.sql  0008_dm_chat_uniqueness.sql  0010_dm_chat_uniqueness.sql  0010_history_sync_timeline_repair_pending_only_index.sql  0011_history_sync_timeline_repair.sql  0012_history_sync_timeline_repair_index.sql  0014_chat_lifecycle.sql  0014_feature_flags.sql  0016_debug_metrics.sql  0017_message_repair_witness.sql  0018_handle_partial_unique.sql  0019_missing_fk_indexes.sql  0020_chat_device_members_leaf_index_not_null.sql
openapi/: v0.yaml
scripts/: __init__.py  audit-ffi-usage.sh  client-smoke-harness.sh  ffi_parity_audit.py  generate-app-icons.swift  generate_strings.rb  verify-uniffi-bindings.sh
server/: .env.example  Caddyfile  README.md  conduit.toml  docker-compose.yml  provisioning.md
(+432 files in other folders)
