[workspace]
members = [
    "apps/trixd",
    "crates/trix-core",
    "crates/trix-server",
    "crates/trix-types",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
aead = "0.5.2"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["json"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.1.1"
http = "1.3.1"
jsonwebtoken = "9.3.1"
openmls = { version = "0.8.1", features = ["openmls_rust_crypto"] }
openmls_basic_credential = "0.5.0"
openmls_memory_storage = { version = "0.5.0", features = ["persistence"] }
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
rand = "0.9.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }
thiserror = "2.0.12"
tls_codec = "0.4.2"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uniffi = "0.31.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
x25519-dalek = "2.0.1"
