[workspace]
members = [
    "apps/trix-push-gateway",
    "crates/trix-push",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.7"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["json", "ws"] }
http = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
quick-xml = "0.38.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
