[package]
name = "trix-botd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
trix-bot = { path = "../../crates/trix-bot" }
trix-core = { path = "../../crates/trix-core" }
trix-types = { path = "../../crates/trix-types" }
uuid.workspace = true
