[package]
name = "trix-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "trix-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
ratatui.workspace = true
tokio.workspace = true
trix-bot = { path = "../../crates/trix-bot" }
trix-core = { path = "../../crates/trix-core" }
trix-types = { path = "../../crates/trix-types" }
