[package]
name = "trix-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
trix-core = { path = "../trix-core" }
trix-types = { path = "../trix-types" }
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
sqlx.workspace = true
trix-server = { path = "../trix-server" }
