[package]
name = "trix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tls_codec.workspace = true
uuid.workspace = true
