[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[package]
name = "trix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aead.workspace = true
anyhow.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_memory_storage.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
trix-types = { path = "../trix-types" }
uniffi = { workspace = true, features = ["tokio", "cli"] }
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
sqlx.workspace = true
trix-server = { path = "../trix-server" }
