[package]
name = "trix-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle = "2.6.1"
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
trix-types = { path = "../trix-types" }
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
